Adicionando o padrão de fonte especificado no html e no style.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,8 @@ body{
     width: 100vw;
     height: 100vh;
     background-color: var(--light-grayish-blue);
+    font-family: "Manrope", sans-serif;
+    font-size: 13px;
 }
 
 .container-article-preview{
